--- a/index.html
+++ b/index.html
@@ -71,21 +71,22 @@
 	</main>
 	<div id="contacto"></div>
 	<footer>
-		<section class="phone">
-			Teléfono: +52 5512131565 <br>
-			Correo: contacto@circulojuridico.com <br>
-			Dirección: CDMX, Polanco <br>
+		<section class="phone" id="phone">
+			<a href="tel:+5586804039">Teléfono: +52 5512131565</a> <br>
+			<a href="mailto:lorenzccaz@gmail.com">Correo: contacto@circulojuridico.com</a> <br>
+			<a href="">Dirección: CDMX, Polanco</a> <br>
 		</section>
 		<section class="maps" id="map">
 			
 		</section>
-		<section class="form">
+		<section class="form" id="form">
 			
 		</section>
 	</footer>
 
 
 	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="obs.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW2npadploeFZE5Imq7YURRFf5Oj-zz5A&region=MX&language=es&callback=initMap"></script>
 </body>
 </html>
