--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 			<h1><a href="#servicios">Servicios</a></h1>
 			<h1><a href="#contacto">Contacto</a></h1>
 		</nav>
+		<div class="btn-menu">
+			<img class="img-menu" src="imagenes/menu.svg">
+		</div>
 	</header>
 
 	<main>
@@ -70,7 +73,7 @@
 	<div id="contacto"></div>
 	<footer id="footer">
 		<section class="phone" id="phone">
-			<a href="tel:+5586804039">Teléfono: +52 5512131565</a> <br>
+			<a href="tel:+5215550726208">Teléfono: +52 1 55 5072 6208</a> <br>
 			<a href="mailto:lorenzccaz@gmail.com">Correo: contacto@circulojuridico.com</a> <br>
 			<a href="">Dirección: CDMX, Polanco</a> <br>
 		</section>
