--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 		</div>
 	</header>
 
-	<main>
+	<main class="main">
+		<div class="nav-res">
+			<h1><a class="inicio" href="#inicio">Inicio</a></h1>
+			<h1><a class="servicio" href="#servicios">Servicios</a></h1>
+			<h1><a class="contacto" href="#contacto">Contacto</a></h1>
+		</div>
 		<section class="beggin">
 			<div class="titles">
 				<img id="img" src="imagenes/logo.png">
