--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="inicio"></div>
 	<header class="header">
-		<h1 class="title">Círculos Jurídicos</h1>
+		<h1 class="title">Círculo Integral de Negocios</h1>
 		<nav class="nav">
 			<h1><a href="#inicio">Inicio</a></h1>
 			<h1><a href="#servicios">Servicios</a></h1>
@@ -34,58 +34,40 @@
 
 
 		</section>
-		<!-- <article class="news-section">
-			<div class="news">
-				<section class="news1">
-					<h1>¿Quiénes Somos?</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
-				</section>
-				<section class="news2">
-					<h1>Visión de Negocios</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
-				</section>
-			</div>
-		</article> -->
 		<div id="servicios"></div>
 		<section class="services-section">
 			
 			<div class="services">
 				<div class="service1" id="s1">
 					<h2 class="serv">ASESORÍA JURÍDICA (Trabajadores)</h2>
-					<h3 class="more">Leer más...</h3>
+					<h3 class="more">Ver más...</h3>
 				</div>
 				<div class="service2" id="s2">
 					<h2 class="serv">CONSULTORÍA EMPRESARIAL</h2>
-					<h3 class="more">Leer más...</h3>
+					<h3 class="more">Ver más...</h3>
 				</div>
 				<div class="service3" id="s3">
 					<h2 class="serv">LITIGIO EN MATERIA LABORAL</h2>
-					<h3 class="more">Leer más...</h3>
+					<h3 class="more">Ver más...</h3>
 				</div>
 				<div class="service4" id="s4">
 					<h2 class="serv">. . .</h2>
-					<h3 class="more">Leer más...</h3>
+					<h3 class="more">Ver más...</h3>
 				</div>
 			</div>
 		</section>
 	</main>
-	<div id="contacto"></div>
 	<footer id="footer">
 		<section class="phone" id="phone">
-			<a href="tel:+5215550726208">Teléfono: +52 1 55 5072 6208</a> <br>
-			<a href="mailto:lorenzccaz@gmail.com">Correo: contacto@circulojuridico.com</a> <br>
+			<a href="tel:+5215550726208">Llámanos</a> <br>
+			<a href="https://api.whatsapp.com/send?phone=5550726208">Contáctanos por Whatsapp</a><br>
+			<a href="mailto:lorenzccaz@gmail.com">Envíanos un correo</a> <br>
 			<a href="">Dirección: CDMX, Polanco</a> <br>
 		</section>
 		<section class="maps" id="map">
 			
 		</section>
-		<section class="form" id="form">
+		<!-- <section class="form" id="form">
 			<form>
 				<input type="text" name="name" placeholder="Escribe tu nombre...">
 				<input type="number" name="phone" placeholder="Escribe tu número...">
@@ -98,11 +80,12 @@
 				</select>
 				<input type="submit" name="enviar" value="Enviar">
 			</form>
-		</section>
+		</section> -->
 	</footer>
 	<section class="aviso">
-			<h3><a href="">Aviso de privacidad</a></h3>
-		</section>
+			<h3><a href="">©Copyright 2022 Aviso de privacidad</a></h3>
+ 	</section>
+ 	<div id="contacto"></div>
 	<script type="text/javascript" src="index.js"></script>
 	<script type="text/javascript" src="obs.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW2npadploeFZE5Imq7YURRFf5Oj-zz5A&region=MX&language=es&callback=initMap"></script>
