--- a/index.html
+++ b/index.html
@@ -40,18 +40,22 @@
 			<div class="services">
 				<div class="service1" id="s1">
 					<h2 class="serv">ASESORÍA JURÍDICA (Trabajadores)</h2>
+					<img class="img-serv" src="imagenes/law.svg">
 					<h3 class="more">Ver más...</h3>
 				</div>
 				<div class="service2" id="s2">
 					<h2 class="serv">CONSULTORÍA EMPRESARIAL</h2>
+					<img class="img-serv" src="imagenes/law2.svg">
 					<h3 class="more">Ver más...</h3>
 				</div>
 				<div class="service3" id="s3">
 					<h2 class="serv">LITIGIO EN MATERIA LABORAL</h2>
+					<img class="img-serv" src="imagenes/law3.svg">
 					<h3 class="more">Ver más...</h3>
 				</div>
 				<div class="service4" id="s4">
 					<h2 class="serv">. . .</h2>
+					<img class="img-serv" src="imagenes/law4.svg">
 					<h3 class="more">Ver más...</h3>
 				</div>
 			</div>
