--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="inicio"></div>
 	<header class="header">
-		<h1 class="title">Círculo Integral de Negocios</h1>
+		<h1 class="title">Círculo Integral</h1>
 		<nav class="nav">
 			<h1><a href="#inicio">Inicio</a></h1>
 			<h1><a href="#servicios">Servicios</a></h1>
@@ -31,7 +31,9 @@
 			<div class="titles">
 				<img id="img" src="imagenes/logo.png">
 			</div>
-
+			<div class="arrow">
+				<a class="img-arrow" href="#servicios"><img src="imagenes/arrow.svg" alt=""></a>
+			</div>
 
 		</section>
 		<div id="servicios"></div>
